Fixed a null pointer exception, tried to improve call resume behavior and started adding the new Virtualizer effect

--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -170,38 +170,37 @@
     <string name="there_is_a_new_setting">Існує новий параметр в меню \"Налаштування\":</string>
     <string name="check_it_out">Проверьте это :)</string>
     <string name="color_theme">Колірна схема</string>
-    <string name="widget">Widget</string>
-    <string name="transparent_background">Transparent background</string>
-    <string name="text_color">Text color</string>
-    <string name="icon_color">Icon color</string>
-    <string name="apply_theme">Apply theme</string>
-    <string name="hard_theme">Your theme has at least one hard-to-read combination of text/background&#8230; Apply theme anyway?</string>
-    <string name="unreadable_theme">Sorry, but your theme has at least one unreadable combination of text/background colors :(</string>
-    <string name="discard_theme">Do you really want to discard the changes made to the theme?</string>
-    <string name="load_colors_from_current_theme">Load colors from current theme</string>
-    <string name="general">General</string>
-    <string name="selection">Selection</string>
-    <string name="keyboard_focus">Selection with Keyboard Focus</string>
-    <string name="background">Background</string>
-    <string name="top_background">Top background</string>
-    <string name="bottom_background">Bottom background</string>
-    <string name="pressed_background">Pressed background</string>
-    <string name="window_background">Window background</string>
-    <string name="control_mode_background">Control mode background</string>
-    <string name="visualizer_background">Visualizer background</string>
-    <string name="highlight_background">Highlight background</string>
-    <string name="icon">Icon</string>
-    <string name="border">Border</string>
-    <string name="divider">Divider</string>
-    <string name="text">Text</string>
-    <string name="text_secondary">Text (secondary)</string>
-    <string name="window_text">Window text</string>
-    <string name="window_text_disabled">Window text (disabled)</string>
-    <string name="highlight_text">Highlight text</string>
-    <string name="there_are_new_features">There are new features available in the \"Settings\" menu:</string>
-    <string name="custom_widget">Customizable widget</string>
-    <string name="custom_color_theme">Customizable color theme</string>
-    <string name="add_artist">Add artist</string>
-    <string name="play_artist">Play artist</string>
-    
-</resources>
+    <string name="widget">Віджет</string>
+    <string name="transparent_background">Прозорий фон</string>
+    <string name="text_color">Колір тексту</string>
+    <string name="icon_color">Колір іконки</string>
+    <string name="apply_theme">Застосувати тему</string>
+    <string name="hard_theme"> Ваша колірна схема має як мінімум одну комбінацію кольорів важких для сприйняття тексту/тла&#8230; Застосувати цветовух схему?</string>
+    <string name="unreadable_theme">Вибачте , але Ваша колірна схема має як мінімум одну несприйнятливість для сприйняття комбінацію кольорів тексту/фону :(</string>
+    <string name="discard_theme">Ви дійсно хочете скасувати всі зроблені зміни в даній колірній схемі?</string>
+    <string name="load_colors_from_current_theme">Завантаження кольори з поточної теми</string>
+    <string name="general">Загальне</string>
+    <string name="selection">Вибір</string>
+    <string name="keyboard_focus">Вибір з клавіатурним фокусом</string>
+    <string name="background">Фон</string>
+    <string name="top_background">Верхня частина фону</string>
+    <string name="bottom_background">​​Нижня частина фону</string>
+    <string name="pressed_background">Пресований фон</string>
+    <string name="window_background">Фон вікна</string>
+    <string name="control_mode_background">Режим управління фоном</string>
+    <string name="visualizer_background">​​Фон візуалізатора</string>
+    <string name="highlight_background">Виділений фон</string>
+    <string name="icon">Іконка</string>
+    <string name="border">Кордон</string>
+    <string name="divider">Роздільник</string>
+    <string name="text">Текст</string>
+    <string name="text_secondary">Текст (другорядний)</string>
+    <string name="window_text">Текст вікна</string>
+    <string name="window_text_disabled">Текст вікна (неактивний)</string>
+    <string name="highlight_text">Виділений текст</string>
+    <string name="there_are_new_features">Доступні нові можливості в меню "Налаштування":</string>
+    <string name="custom_widget">Настроюваний віджет</string>
+    <string name="custom_color_theme">Налаштовувана колірна схема</string>
+    <string name="add_artist">Додати виконавця</string>
+    <string name="play_artist">Відтворити виконавця</string>
+</resources>
