--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -170,38 +170,37 @@
     <string name="there_is_a_new_setting">Существует новый параметр в меню \"Настройки\":</string>
     <string name="check_it_out">Перевірте це :)</string>
     <string name="color_theme">Цветовая схема</string>
-    <string name="widget">Widget</string>
-    <string name="transparent_background">Transparent background</string>
-    <string name="text_color">Text color</string>
-    <string name="icon_color">Icon color</string>
-    <string name="apply_theme">Apply theme</string>
-    <string name="hard_theme">Your theme has at least one hard-to-read combination of text/background&#8230; Apply theme anyway?</string>
-    <string name="unreadable_theme">Sorry, but your theme has at least one unreadable combination of text/background colors :(</string>
-    <string name="discard_theme">Do you really want to discard the changes made to the theme?</string>
-    <string name="load_colors_from_current_theme">Load colors from current theme</string>
-    <string name="general">General</string>
-    <string name="selection">Selection</string>
-    <string name="keyboard_focus">Selection with Keyboard Focus</string>
-    <string name="background">Background</string>
-    <string name="top_background">Top background</string>
-    <string name="bottom_background">Bottom background</string>
-    <string name="pressed_background">Pressed background</string>
-    <string name="window_background">Window background</string>
-    <string name="control_mode_background">Control mode background</string>
-    <string name="visualizer_background">Visualizer background</string>
-    <string name="highlight_background">Highlight background</string>
-    <string name="icon">Icon</string>
-    <string name="border">Border</string>
-    <string name="divider">Divider</string>
-    <string name="text">Text</string>
-    <string name="text_secondary">Text (secondary)</string>
-    <string name="window_text">Window text</string>
-    <string name="window_text_disabled">Window text (disabled)</string>
-    <string name="highlight_text">Highlight text</string>
-    <string name="there_are_new_features">There are new features available in the \"Settings\" menu:</string>
-    <string name="custom_widget">Customizable widget</string>
-    <string name="custom_color_theme">Customizable color theme</string>
-    <string name="add_artist">Add artist</string>
-    <string name="play_artist">Play artist</string>
-    
-</resources>
+    <string name="widget">Виджет</string>
+    <string name="transparent_background">Прозрачный фон</string>
+    <string name="text_color">Цвет текста</string>
+    <string name="icon_color">Цвет иконки</string>
+    <string name="apply_theme">Применить тему</string>
+    <string name="hard_theme">Ваша цветовая схема имеет как минимум одну комбинацию цветов тяжёлых для восприятия текста/фона&#8230; Применить цветовух схему?</string>
+    <string name="unreadable_theme">Извините, но Ваша цветовая схема имеет как минимум одну невосприимчивую для восприятия комбинацию цветов текста/фона :(</string>
+    <string name="discard_theme">Вы действительно хотите отменить все сделанные изменения в данной цветовой схеме?</string>
+    <string name="load_colors_from_current_theme">Загрузка цветов из текущей темы</string>
+    <string name="general">Общее</string>
+    <string name="selection">Выбор</string>
+    <string name="keyboard_focus">Выбор с клавиатурным фокусом</string>
+    <string name="background">Фон</string>
+    <string name="top_background">Верхняя часть фона</string>
+    <string name="bottom_background">Нижняя часть фона</string>
+    <string name="pressed_background">Прессованный фон</string>
+    <string name="window_background">Фон окна</string>
+    <string name="control_mode_background">Режим управления фоном</string>
+    <string name="visualizer_background">Фон визуализатора</string>
+    <string name="highlight_background">Выделенный фон</string>
+    <string name="icon">Иконка</string>
+    <string name="border">Граница</string>
+    <string name="divider">Разделитель</string>
+    <string name="text">Текст</string>
+    <string name="text_secondary">Текст (второстепенный)</string>
+    <string name="window_text">Текст окна</string>
+    <string name="window_text_disabled">Текст окна (неактивный)</string>
+    <string name="highlight_text">Выделенный текст</string>
+    <string name="there_are_new_features">Доступны новые возможности в меню "Настройки":</string>
+    <string name="custom_widget">Настраиваемый виджет</string>
+    <string name="custom_color_theme">Настраиваемая цветовая схема</string>
+    <string name="add_artist">Добавить исполнителя</string>
+    <string name="play_artist">Воспроизвести исполнителя</string>
+</resources>
