--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -203,5 +203,7 @@
     <string name="custom_color_theme">Tema de cores personalizável</string>
     <string name="add_artist">Adicionar artista</string>
     <string name="play_artist">Tocar artista</string>
-    
+    <string name="touch_to_add_songs">Lista vazia!\n\nToque aqui para adicionar músicas :)</string>
+    <string name="opt_back_key_always_returns_to_player_when_browsing">Tecla Voltar física sempre retorna ao player quando estiver procurando músicas</string>
+
 </resources>
