--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -203,4 +203,7 @@
     <string name="custom_color_theme">Налаштовувана колірна схема</string>
     <string name="add_artist">Додати виконавця</string>
     <string name="play_artist">Відтворити виконавця</string>
-</resources>
+    <string name="touch_to_add_songs">Empty list!\nTouch here to add songs :)</string>
+    <string name="opt_back_key_always_returns_to_player_when_browsing">Physical Back key always returns to player when browsing songs</string>
+
+</resources>
