Trying to improve the browser

--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -207,5 +207,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Tecla Voltar física sempre retorna ao player quando estiver adicionando músicas</string>
     <string name="custom_key_behavior">Comportamento personalizável de teclas</string>
     <string name="opt_wrap_around_list">Mover a seleção para a extremidade oposta de uma lista ao atingir sua parte superior/inferior</string>
+    <string name="player">Player</string>
+    <string name="go_back_to_player">Voltar ao player</string>
 
 </resources>
