--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -207,5 +207,7 @@
     <string name="opt_back_key_always_returns_to_player_when_browsing">Physical Back key always returns to player when browsing songs</string>
     <string name="custom_key_behavior">Customizable key behavior</string>
     <string name="opt_wrap_around_list">Move the selection to the opposite end of a list when reaching its top/bottom</string>
+    <string name="player">Player</string>
+    <string name="go_back_to_player">Return to the player</string>
 
 </resources>
