--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -203,10 +203,12 @@
     <string name="custom_color_theme">Настраиваемая цветовая схема</string>
     <string name="add_artist">Добавить исполнителя</string>
     <string name="play_artist">Воспроизвести исполнителя</string>
-    <string name="touch_to_add_songs">Empty list!\nTouch here to add songs :)</string>
-    <string name="opt_back_key_always_returns_to_player_when_browsing">Physical Back key always returns to player when browsing songs</string>
+    <string name="touch_to_add_songs">Empty list!\n\nTouch here, or the + button, to add songs :)</string>
     <string name="custom_key_behavior">Customizable key behavior</string>
-    <string name="opt_wrap_around_list">Move the selection to the opposite end of a list when reaching its top/bottom</string>
+    <string name="opt_wrap_around_list">Move keyboard selection to the opposite end of a list when reaching its top/bottom</string>
+    <string name="opt_extra_spacing">Use large spacing in headers</string>
+    <string name="opt_old_browser_behavior">Use old behavior to add songs</string>
+    <string name="opt_back_key_always_returns_to_player_when_browsing">Physical Back key always returns to player while adding songs</string>
     <string name="player">Player</string>
     <string name="go_back_to_player">Return to the player</string>
 
