--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -203,10 +203,12 @@
     <string name="custom_color_theme">Customizable color theme</string>
     <string name="add_artist">Add artist</string>
     <string name="play_artist">Play artist</string>
-    <string name="touch_to_add_songs">Empty list!\n\nTouch here to add songs :)</string>
-    <string name="opt_back_key_always_returns_to_player_when_browsing">Physical Back key always returns to player when browsing songs</string>
+    <string name="touch_to_add_songs">Empty list!\n\nTouch here, or the + button, to add songs :)</string>
     <string name="custom_key_behavior">Customizable key behavior</string>
-    <string name="opt_wrap_around_list">Move the selection to the opposite end of a list when reaching its top/bottom</string>
+    <string name="opt_wrap_around_list">Move keyboard selection to the opposite end of a list when reaching its top/bottom</string>
+    <string name="opt_extra_spacing">Use large spacing in headers</string>
+    <string name="opt_old_browser_behavior">Use old behavior to add songs</string>
+    <string name="opt_back_key_always_returns_to_player_when_browsing">Physical Back key always returns to player while adding songs</string>
     <string name="player">Player</string>
     <string name="go_back_to_player">Return to the player</string>
 
