--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -97,19 +97,19 @@
     <string name="save_list">Зберегти список</string>
     <string name="item_list">список</string>
     <string name="more">Детальніше&#8230;</string>
+    <string name="more_effects">Детальніше&#8230;</string>
     <string name="visualizer_not_supported">Ваш пристрій не підтримує візуалізацію :(</string>
     <string name="audio_effects">Звукові ефекти</string>
-    <string name="go_to_equalizer">Перейти до налаштувань еквалайзера&#8230;</string>
-    <string name="enable_equalizer">Включити еквалайзер</string>
     <string name="equalizer_not_supported">Ваш пристрій не підтримує еквалайзер :(</string>
     <string name="zero_preset">Скинути передустановку</string>
     <string name="load_preset">Завантажити передустановку</string>
     <string name="save_preset">Зберегти передустановку</string>
     <string name="item_preset">передустановка</string>
-    <string name="go_to_bass_boost">Перейти до налаштувань басів&#8230;</string>
-    <string name="enable_bass_boost">Включити посилення басів</string>
     <string name="bass_boost_not_supported">Ваш пристрій не підтримує посилення басів :(</string>
     <string name="bass_boost_strength_not_supported">Ваш пристрій не підтримує посилення басів :(</string>
+    <string name="equalizer">Еквалайзер</string>
+    <string name="bass_boost">Посилення басів</string>
+    <string name="virtualization">Віртуалізація</string>
     <string name="visualizer">Візуалізатор</string>
     <string name="random_mode">Довільний режим</string>
     <string name="settings">Налаштування</string>
@@ -211,5 +211,5 @@
     <string name="player">Player</string>
     <string name="go_back_to_player">Return to the player</string>
     <string name="startup_message">There are many improvements in the way you add and play songs! You can switch back to the old way at any time in the \"Settings\" menu, though ;)</string>
-    
+
 </resources>
