--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="fplay">FPlay</string>
     <string name="app_by">por Carlos Rafael Gimenes das Neves</string>
-    <string name="app_description">Reproductor de música simple y directo para android</string>
-    <string name="app_more_info">Estás buscando más información acerca del programa?\nCodigo fuente?\nTiene alguna peticion?\nEncontro algún bug?!?\nQuiere tener contacto conmigo? :)\n\nMande un email:\ndev@carlosrafaelgn.com.br\no visite el proyecto de la aplicacion GitHub:\nhttps://github.com/carlosrafaelgn/FPlayAndroid\n\nUn agradecimiento muy especial a Sviat Hurskyi (sviat.hurskyi@gmail.com) por las traducciones al Ruso y Ucraniano!\n\nRecursos gratuitos de terceros utilizados en la aplicación:</string>
+    <string name="app_description">Reproductor de música con una interfaz limpia, ecualizador, refuerzo de graves y colores personalizables</string>
+    <string name="app_more_info">Estás buscando más información acerca del programa?\nCodigo fuente?\nTiene alguna peticion?\nEncontro algún bug?!?\nQuiere tener contacto conmigo? :)\n\nMande un email:\ndev@carlosrafaelgn.com.br\no visite el proyecto de la aplicacion GitHub:\nhttps://github.com/carlosrafaelgn/FPlayAndroid\n\nUn agradecimiento muy especial a las personas que ayudaron a traducir FPlay:\n\nSviat Hurskyi (sviat.hurskyi@gmail.com)\nDavid Gonzalez (redandy16@gmail.com)\n\nMuchas gracias!! :D\n\nRecursos gratuitos de terceros utilizados en la aplicación:</string>
     <string name="app_more_info2">\n\nLa fuente utilizada para dislexia es OpenDyslexic Regular, por Abelardo Gonzalez, disponible en http://dyslexicfonts.com and licenciado por Creative Commons Attribution 3.0 Unported License.\n\nLa fuente utilizada para utilizar iconos en el programa, icons.ttf, realizada con IcoMoon App, por Keyamoon, disponible en:\nhttp://icomoon.io/app\n\nAlgunos de los iconos fueron creados por mi, otros vinieron de lo conjunto IcoMoon Free, por Keyamoon, licenciado por Creative Commons License 3.0.\n\nFPlay es licenciado por los terminos de FreeBSD License.</string>
     <string name="app_license">\n\nCopyright &#169; 2013–2014, Carlos Rafael Gimenes das Neves\nAll rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n \n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the FreeBSD Project.</string>
     <string name="system_info">Información del sistema</string>
@@ -23,7 +23,7 @@
     <string name="got_it">Entendido!</string>
     <string name="volume">Volumen</string>
     <string name="go_to">Ir al</string>
-    <string name="msg_sel">Toque para seleccionar mas</string>
+    <string name="msg_sel">Toque para seleccionar más</string>
     <string name="msg_move">Toque para mover a selección</string>
     <string name="msg_select_song">Por favor, seleccione una canción para añadir</string>
     <string name="msg_select_folder_add">Por favor, seleccione una carpeta para añadir</string>
@@ -31,15 +31,15 @@
     <string name="msg_select_favorite_remove">Por favor, seleccione un favorito para remover</string>
     <string name="msg_turn_off_title">Apagado automático</string>
     <string name="msg_turn_off">Apagar el reproductor después de cuantos minutos?</string>
-    <string name="msg_enter_name">Introduzca el nombre para nuevo %s&#58;</string>
+    <string name="msg_enter_name">Introduzca el nombre para nueva %s&#58;</string>
     <string name="msg_confirm_overwrite">Quiere sobrescribir la información de %1$s \"%2$s\"?</string>
     <string name="msg_confirm_delete">Confirma que desea borrar %1$s \"%2$s\"?</string>
     <string name="msg_overwrite">Sobrescribir %1$s \"%2$s\"</string>
     <string name="msg_delete">Eliminar %1$s \"%2$s\"</string>
-    <string name="msg_create_new_title">Crear nuevo %s</string>
-    <string name="msg_create_new">Crear nuevo %s&#8230;</string>
-    <string name="msg_add">Este boton añade a la lista de reproducción, toda la música en una carpeta incluyendo las subcarpetas.</string>
-    <string name="msg_play">Este boton añade a la lista de reproducción, toda la música en una carpeta incluyendo las subcarpetas e inicia la reproducción.</string>
+    <string name="msg_create_new_title">Crear nueva %s</string>
+    <string name="msg_create_new">Crear nueva %s&#8230;</string>
+    <string name="msg_add">Este boton añade a la lista de reproducción, todas las canciones en la carpeta incluyendo las subcarpetas.</string>
+    <string name="msg_play">Este boton añade a la lista de reproducción, todas las canciones en la carpeta incluyendo las subcarpetas e inicia la reproducción.</string>
     <string name="msg_error_download_path">No fue posible acceder a la carpeta de descarga :(</string>
     <string name="msg_error_exporting_settings">Algo salió mal al exportar la configuración :(</string>
     <string name="opt_language">Idioma:</string>
@@ -47,10 +47,10 @@
     <string name="opt_auto_turn_off">Apagar automáticamente el reproductor después de:</string>
     <string name="opt_keep_screen_on">Manter pantalla siempre encendida</string>
     <string name="opt_volume_control_type">Tipo de control de volumen:</string>
-    <string name="opt_is_divider_visible">Mostrar división enre los ítems de la lista</string>
+    <string name="opt_is_divider_visible">Mostrar división entre los ítems de la lista</string>
     <string name="opt_is_vertical_margin_large">Usar espacio amplio entre los elementos de la lista</string>
-    <string name="opt_handle_call_key">Usar la tecla llamar/Discar como Play/Pause (beta)</string>
-    <string name="opt_play_when_headset_plugged">Reproducir automáticamente cuando se conecte un auricular (beta)</string>
+    <string name="opt_handle_call_key">Usar la tecla Llamar/Discar como Play/Pause (beta)</string>
+    <string name="opt_play_when_headset_plugged">Reproducir automáticamente cuando se conecte un auricular con cable (beta)</string>
     <string name="opt_block_back_key">Impedir que la tecla de retroceso envié a la pantalla de inicio</string>
     <string name="opt_double_click_mode">Usar doble toque para tocar música de la lista</string>
     <string name="opt_marquee_title">Girar el título de la canción en reproducción cuando no se visualice completa en la pantalla</string>
@@ -94,22 +94,20 @@
     <string name="list2">Lista</string>
     <string name="clear_list">Limpiar lista</string>
     <string name="load_list">Abrir lista</string>
-    <string name="save_list">Guardar list</string>
+    <string name="save_list">Guardar lista</string>
     <string name="item_list">lista</string>
     <string name="more">Más&#8230;</string>
     <string name="more_effects">Más efectos&#8230;</string>
     <string name="visualizer_not_supported">Tu dispositivo no soporta la visualización :(</string>
     <string name="audio_effects">Efectos de audio</string>
-    <string name="equalizer_not_supported">Su dispositivo no suporta ecualizador :(</string>
-    <string name="zero_preset">Ajustes en cero</string>
-    <string name="load_preset">Abrir ajuste</string>
-    <string name="save_preset">Guardar ajuste</string>
-    <string name="item_preset">ajuste</string>
-    <string name="bass_boost_not_supported">Su dispositivo no suporta refuerzo de graves :(</string>
-    <string name="bass_boost_strength_not_supported">Su dispositivo no suporta ajuste fino de refuerzo de graves :(</string>
+    <string name="zero_preset">Configuraciones en cero</string>
+    <string name="load_preset">Abrir configuración</string>
+    <string name="save_preset">Guardar configuración</string>
+    <string name="item_preset">configuración</string>
     <string name="equalizer">Ecualizador</string>
     <string name="bass_boost">Refuerzo de graves</string>
     <string name="virtualization">Virtualización</string>
+    <string name="reverb">Reverberación</string>
     <string name="visualizer">Visualizador</string>
     <string name="random_mode">Modo aleatorio</string>
     <string name="settings">Configuración</string>
@@ -151,28 +149,28 @@
     <string name="all_files">Todos los archivos</string>
     <string name="internal_storage">Almacenamiento Interno</string>
     <string name="external_storage">Almacenamiento Externo</string>
-    <string name="error_playback">Disculpe, ah ocurrido un error durante la reproducción :(</string>
-    <string name="error_msg">Disculpe, ah ocurrido un error durante la reproducción:</string>
+    <string name="error_playback">Lo sentimos, ha ocurrido un error durante la reproducción :(</string>
+    <string name="error_msg">Lo sentimos, ha ocurrido un error durante la reproducción:</string>
     <string name="error_state">Lo sentimos, la reproducción tuvo que ser interrumpida por un mal comportamiento del reproductor :(</string>
     <string name="error_io">Lo sentimos, la reproducción tuvo que ser interrumpida debido a que el reproductor ha tenido un fallo:(</string>
     <string name="error_file_not_found">Lo sentimos, el archivo no se pudo localizar:(</string>
-    <string name="error_timeout">lo sentimos el tiempo de acceso ha expirado durante la reproducción:(</string>
-    <string name="error_server_died">Lo sentimos el servidor de medio ha muerto durante la reproducción :(</string>
-    <string name="error_security">Lo sentimos ha ocurrido un problema de seguridad durante la reproducción :(</string>
+    <string name="error_timeout">Lo sentimos, el tiempo de acceso ha expirado durante la reproducción:(</string>
+    <string name="error_server_died">Lo sentimos, el servidor de medio ha muerto durante la reproducción :(</string>
+    <string name="error_security">Lo sentimos, ha ocurrido un problema de seguridad durante la reproducción :(</string>
     <string name="coming_soon">Próximamente&#8230; ;)</string>
     <string name="blue_orange">Azul/Naranja</string>
     <string name="blue">Azul</string>
     <string name="orange">Naranja</string>
-    <string name="light">Light</string>
-    <string name="dark_light">Dark/Light</string>
+    <string name="light">Claro</string>
+    <string name="dark_light">Oscuro/Claro</string>
     <string name="new_setting">Nueva configuración!</string>
     <string name="there_is_a_new_setting">Hay una nueva opción disponible en el menu \"Configuración\":</string>
     <string name="check_it_out">Échale un vistazo :)</string>
     <string name="color_theme">Tema de color</string>
     <string name="widget">Widget</string>
     <string name="transparent_background">Fondo transparente</string>
-    <string name="text_color">Text color</string>
-    <string name="icon_color">Icon color</string>
+    <string name="text_color">Color de texto</string>
+    <string name="icon_color">Color de icono</string>
     <string name="apply_theme">Aplicar tema</string>
     <string name="hard_theme">El tema tiene por lo menos una combinación de colores (texto/fondo) difícil de leer&#8230; Aplicar el tema de todos modos?</string>
     <string name="unreadable_theme">Lo sentimos, pero tu tema tiene al menos una combinación de colores (texto/fondo) ilegible :(</string>
@@ -180,36 +178,40 @@
     <string name="load_colors_from_current_theme">Cargar colores de tema actual</string>
     <string name="general">General</string>
     <string name="selection">Selección</string>
-    <string name="keyboard_focus">Selección con el foco del teclado</string>
-    <string name="background">Fondo</string>
-    <string name="top_background">Top background</string>
-    <string name="bottom_background">Bottom background</string>
-    <string name="pressed_background">Pressed background</string>
-    <string name="window_background">Window background</string>
-    <string name="control_mode_background">Control mode background</string>
-    <string name="visualizer_background">Visualizer background</string>
-    <string name="highlight_background">Highlight background</string>
+    <string name="keyboard_focus">Enfoque del teclado</string>
+    <string name="background">Color central</string>
+    <string name="top_background">Color degradado superior</string>
+    <string name="bottom_background">Color degradado inferior</string>
+    <string name="pressed_background">Color al presionar</string>
+    <string name="window_background">Color de ventana</string>
+    <string name="control_mode_background">Fondo en el Modo control</string>
+    <string name="visualizer_background">Fondo en el Modo de visualización</string>
+    <string name="highlight_background">Color de titulo de menu</string>
     <string name="icon">Icono</string>
-    <string name="border">Border</string>
-    <string name="divider">Divider</string>
-    <string name="text">Text</string>
-    <string name="text_secondary">Text (secondary)</string>
-    <string name="window_text">Window text</string>
-    <string name="window_text_disabled">Window text (disabled)</string>
-    <string name="highlight_text">Highlight text</string>
-    <string name="there_are_new_features">There are new features available in the \"Settings\" menu:</string>
-    <string name="custom_widget">Customizable widget</string>
-    <string name="custom_color_theme">Customizable color theme</string>
+    <string name="border">Borde</string>
+    <string name="divider">Divisor</string>
+    <string name="text">Texto</string>
+    <string name="text_secondary">Texto (secundario)</string>
+    <string name="window_text">Texto de la ventana</string>
+    <string name="window_text_disabled">Texto de la ventana (deshabilitar)</string>
+    <string name="highlight_text">Texto de titulo de menu</string>
+    <string name="there_are_new_features">Hay nuevas características disponibles en la opcion \"Configuración\" del menú:</string>
+    <string name="custom_widget">Widget personalizable</string>
+    <string name="custom_color_theme">Tema de color personalizable</string>
     <string name="add_artist">Añadir artista</string>
     <string name="play_artist">Tocar artista</string>
+    <string name="effect_not_supported">Su dispositivo no suporta este efecto :(</string>
+    <string name="equalizer_not_supported">Su dispositivo no suporta ecualizador :(</string>
+    <string name="bass_boost_not_supported">Su dispositivo no suporta refuerzo de graves :(</string>
+    <string name="bass_boost_strength_not_supported">Su dispositivo no suporta ajuste fino de refuerzo de graves :(</string>
     <string name="touch_to_add_songs">Lista vacía!\n\nToque aquí, o el botón +, para añadir canciones :)</string>
-    <string name="custom_key_behavior">Customizable key behavior</string>
-    <string name="opt_wrap_around_list">Move keyboard selection to the opposite end of a list when reaching its top/bottom</string>
-    <string name="opt_extra_spacing">Use large spacing in headers</string>
-    <string name="opt_old_browser_behavior">Use old behavior to add songs</string>
-    <string name="opt_back_key_always_returns_to_player_when_browsing">Physical Back key always returns to player while adding songs</string>
-    <string name="player">Player</string>
-    <string name="go_back_to_player">Volver al player</string>
-    <string name="startup_message">There are many improvements in the way you add and play songs! You can switch back to the old way at any time in the \"Settings\" menu, though ;)</string>
-
+    <string name="custom_key_behavior">Comportamiento personalizable de las teclas</string>
+    <string name="opt_wrap_around_list">Mueve la selección de teclado para el extremo opuesto de la lista al alcanzar la parte superior/inferior</string>
+    <string name="opt_extra_spacing">Usar espacion largo en encabezados</string>
+    <string name="opt_old_browser_behavior">Utilizar comportamiento anterior para agregar canciones</string>
+    <string name="opt_back_key_always_returns_to_player_when_browsing">Tecla de retroceso físico siempre regresa al reproductor mientras se van añadiendo las canciones</string>
+    <string name="player">Reproductor</string>
+    <string name="go_back_to_player">Volver al reproductor</string>
+    <string name="startup_message">Hay muchas mejoras en la forma de agregar y reproducir canciones! Puede volver a la vieja manera, en cualquier momento en la opcion \"Configuración\" del menú ;)</string>
+    
 </resources>
