--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -4,7 +4,7 @@
     <string name="fplay">FPlay</string>
     <string name="app_by">por Carlos Rafael Gimenes das Neves</string>
     <string name="app_description">Player de música com interface limpa, equalizador, ajuste de graves e de cores</string>
-    <string name="app_more_info">Procurando por mais informações?\nTalvez o código fonte?\nTem um pedido?\nEncontrou um bug?!?\nSó quer entrar em contato comigo? :)\n\nMande-me um e-mail:\ndev@carlosrafaelgn.com.br\nou visite o site do projeto do aplicativo no GitHub:\nhttps://github.com/carlosrafaelgn/FPlayAndroid\n\nAgradecimento super especial para Sviat Hurskyi (sviat.hurskyi@gmail.com) pelas traduções em Russo e Ucraniano!\n\nRecursos gratuitos de terceiros utilizados no aplicativo:</string>
+    <string name="app_more_info">Procurando por mais informações?\nTalvez o código fonte?\nTem um pedido?\nEncontrou um bug?!?\nSó quer entrar em contato comigo? :)\n\nMande-me um e-mail:\ndev@carlosrafaelgn.com.br\nou visite o site do projeto do aplicativo no GitHub:\nhttps://github.com/carlosrafaelgn/FPlayAndroid\n\nAgradecimentos super especiais para aqueles que ajudaram a traduzir o FPlay:\n\nSviat Hurskyi (sviat.hurskyi@gmail.com)\nDavid Gonzalez (redandy16@gmail.com)\n\nMuito obrigado!! :D\n\nRecursos gratuitos de terceiros utilizados no aplicativo:</string>
     <string name="app_more_info2">\n\nA fonte utilizada como fonte amigável para dislexia é OpenDyslexic Regular, por Abelardo Gonzalez, disponível em http://dyslexicfonts.com e licenciada sob Creative Commons Attribution 3.0 Unported License.\n\nA fonte utilizada para desenhar os ícones escaláveis, icons.ttf, foi criada utilizando o IcoMoon App, por Keyamoon, disponível em:\nhttp://icomoon.io/app\n\nAlguns dos ícones escaláveis foram criados por mim e alguns vieram do conjunto IcoMoon Free, por Keyamoon, licenciado sob Creative Commons License 3.0.\n\nFPlay é licenciado sob os termos da FreeBSD License.</string>
     <string name="app_license">\n\nCopyright &#169; 2013–2014, Carlos Rafael Gimenes das Neves\nAll rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n \n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the FreeBSD Project.</string>
     <string name="system_info">Informações do sistema</string>
@@ -100,16 +100,14 @@
     <string name="more_effects">Mais efeitos&#8230;</string>
     <string name="visualizer_not_supported">Seu dispositivo não suporta visualização :(</string>
     <string name="audio_effects">Efeitos de áudio</string>
-    <string name="equalizer_not_supported">Seu dispositivo não suporta o equalizador :(</string>
     <string name="zero_preset">Zerar definição</string>
     <string name="load_preset">Abrir definição</string>
     <string name="save_preset">Salvar definição</string>
     <string name="item_preset">definição</string>
-    <string name="bass_boost_not_supported">Seu dispositivo não suporta reforço de graves :(</string>
-    <string name="bass_boost_strength_not_supported">Seu dispositivo não suporta ajuste fino de reforço de graves :(</string>
     <string name="equalizer">Equalizador</string>
     <string name="bass_boost">Reforço de graves</string>
     <string name="virtualization">Virtualização</string>
+    <string name="reverb">Reverberação</string>
     <string name="visualizer">Visualizador</string>
     <string name="random_mode">Modo aleatório</string>
     <string name="settings">Opções</string>
@@ -182,8 +180,8 @@
     <string name="selection">Seleção</string>
     <string name="keyboard_focus">Seleção com Foco do Teclado</string>
     <string name="background">Fundo</string>
-    <string name="top_background">Fundo de cima</string>
-    <string name="bottom_background">Fundo de baixo</string>
+    <string name="top_background">Fundo superior</string>
+    <string name="bottom_background">Fundo inferior</string>
     <string name="pressed_background">Fundo pressionado</string>
     <string name="window_background">Fundo da janela</string>
     <string name="control_mode_background">Fundo do modo controle</string>
@@ -202,6 +200,10 @@
     <string name="custom_color_theme">Tema de cores personalizável</string>
     <string name="add_artist">Adicionar artista</string>
     <string name="play_artist">Tocar artista</string>
+    <string name="effect_not_supported">Seu dispositivo não suporta este efeito :(</string>
+    <string name="equalizer_not_supported">Seu dispositivo não suporta o equalizador :(</string>
+    <string name="bass_boost_not_supported">Seu dispositivo não suporta reforço de graves :(</string>
+    <string name="bass_boost_strength_not_supported">Seu dispositivo não suporta ajuste fino de reforço de graves :(</string>
     <string name="touch_to_add_songs">Lista vazia!\n\nToque aqui, ou no botão +, para adicionar músicas :)</string>
     <string name="custom_key_behavior">Comportamento personalizável de teclas</string>
     <string name="opt_wrap_around_list">Mover a seleção do teclado para a extremidade oposta de uma lista ao atingir sua parte superior/inferior</string>
@@ -211,5 +213,5 @@
     <string name="player">Player</string>
     <string name="go_back_to_player">Voltar ao player</string>
     <string name="startup_message">Há várias melhorias no modo como você adiciona e toca músicas! Contudo, você pode retornar ao modo antigo a qualquer momento no menu \"Opções\" ;)</string>
-
+    
 </resources>
