--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -4,7 +4,7 @@
     <string name="fplay">FPlay</string>
     <string name="app_by">от Carlos Rafael Gimenes das Neves</string>
     <string name="app_description">Простой и понятный музыкальный плеер с эквалайзером для Android</string>
-    <string name="app_more_info">Нужна более подробная информация?\nВозможно интересует исходный код?\nЕсть предложение по развитию проекта?\nНашли ошибку в программе?!?\nПросто хотите пообщаться со мной? :)\n\nПишите на e-mail:\ndev@carlosrafaelgn.com.br\nили посетите сайт программыn\на GitHub:\nhttps://github.com/carlosrafaelgn/FPlayAndroid\n\nОчень отдельное спасибо Sviat Hurskyi (sviat.hurskyi@gmail.com) для российских и украинских переводах!\n\nБесплатные сторонние ресурсы, используемые в приложении:</string>
+    <string name="app_more_info">Нужна более подробная информация?\nВозможно интересует исходный код?\nЕсть предложение по развитию проекта?\nНашли ошибку в программе?!?\nПросто хотите пообщаться со мной? :)\n\nПишите на e-mail:\ndev@carlosrafaelgn.com.br\nили посетите сайт программыn\на GitHub:\nhttps://github.com/carlosrafaelgn/FPlayAndroid\n\nОчень особую благодарность людям, которые помогли перевод FPlay:\n\nSviat Hurskyi (sviat.hurskyi@gmail.com)\nDavid Gonzalez (redandy16@gmail.com)\n\nБольшое спасибо!! :D\n\nБесплатные сторонние ресурсы, используемые в приложении:</string>
     <string name="app_more_info2">\n\nШрифт OpenDyslexic Regular от Abelardo Gonzalez, используемый в качестве дислексического шрифта, доступен по ссылке: http://dyslexicfonts.com под лицензией Creative Commons Attribution 3.0 Unported License.\n\nШрифт, используемый для отображения масштабируемых пиктограмм, icons.ttf, создан, используя IcoMoon App, автор Keyamoon, доступен на сайте:\nhttp://icomoon.io/app\n\nНекоторые из масштабируемых пиктограмм были созданы мной, часть взята из набора иконок IcoMoon Free, автор Keyamoon, под лицензией Creative Commons License 3.0.\n\nFPlay лицензируется в соответствии с условиями лицензии FreeBSD.</string>
     <string name="app_license">\n\nCopyright &#169; 2013–2014, Carlos Rafael Gimenes das Neves\nAll rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n \n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the FreeBSD Project.</string>
     <string name="system_info">Системная информация</string>
@@ -100,16 +100,14 @@
     <string name="more_effects">Подробнее&#8230;</string>
     <string name="visualizer_not_supported">Ваше устройство не поддерживает визуализацию :(</string>
     <string name="audio_effects">Звуковые эффекты</string>
-    <string name="equalizer_not_supported">Ваше устройство не поддерживает эквалайзер :(</string>
     <string name="zero_preset">Сбросить предустановку</string>
     <string name="load_preset">Загрузить предустановку</string>
     <string name="save_preset">Сохранить предустановку</string>
     <string name="item_preset">предустановка</string>
-    <string name="bass_boost_not_supported">Ваше устройство не поддерживает усиление басов :(</string>
-    <string name="bass_boost_strength_not_supported">Ваше устройство не поддерживает усиление басов :(</string>
     <string name="equalizer">Эквалайзер</string>
     <string name="bass_boost">Усиление басов</string>
     <string name="virtualization">Виртуализация</string>
+    <string name="reverb">Реверберации</string>
     <string name="visualizer">Визуализатор</string>
     <string name="random_mode">Случайный режим</string>
     <string name="settings">Настройки</string>
@@ -202,6 +200,10 @@
     <string name="custom_color_theme">Настраиваемая цветовая схема</string>
     <string name="add_artist">Добавить исполнителя</string>
     <string name="play_artist">Воспроизвести исполнителя</string>
+    <string name="effect_not_supported">Ваше устройство не поддерживает этот эффект :(</string>
+    <string name="equalizer_not_supported">Ваше устройство не поддерживает эквалайзер :(</string>
+    <string name="bass_boost_not_supported">Ваше устройство не поддерживает усиление басов :(</string>
+    <string name="bass_boost_strength_not_supported">Ваше устройство не поддерживает усиление басов :(</string>
     <string name="touch_to_add_songs">Empty list!\n\nTouch here, or the + button, to add songs :)</string>
     <string name="custom_key_behavior">Customizable key behavior</string>
     <string name="opt_wrap_around_list">Move keyboard selection to the opposite end of a list when reaching its top/bottom</string>
@@ -211,5 +213,5 @@
     <string name="player">Player</string>
     <string name="go_back_to_player">Return to the player</string>
     <string name="startup_message">There are many improvements in the way you add and play songs! You can switch back to the old way at any time in the \"Settings\" menu, though ;)</string>
-
+    
 </resources>
